@@ -41,28 +41,17 @@
         <jboss.snapshots.repo.id>jboss-snapshots-repository</jboss.snapshots.repo.id>
         <jboss.snapshots.repo.url>https://s01.oss.sonatype.org/content/repositories/snapshots/</jboss.snapshots.repo.url>
 
-        <quarkus.version>2.12.2.Final</quarkus.version>
+        <quarkus.version>2.13.3.Final</quarkus.version>
 
-        <!--
-        Performing a Wildfly upgrade? Run the:
+        <project.build-time>${timestamp}</project.build-time>
 
-             "./misc/scripts/upgrade-wildfly/upgrade-keycloak-to-wildfly-tag.py"
-
-        script with the corresponding Wildfly tag, e.g. '20.0.0.Final' to get necessary Keycloak bits
-        updated automatically based on corresponding artifact versions used in Wildfly and Wildfly Core
-
-        IMPORTANT: If you add new dependency name / version property below, be sure to update the
-        "./misc/scripts/upgrade-wildfly/upgrade-keycloak-to-wildfly-tag.py" script too to ensure
-        the script continues to work
-        -->
-
-        <product.rhsso.version>7.5.0.GA</product.rhsso.version>
-
-        <product.build-time>${timestamp}</product.build-time>
         <wildfly.version>26.1.1.Final</wildfly.version>
         <wildfly.build-tools.version>1.2.13.Final</wildfly.build-tools.version>
-        <eap.version>7.4.0.GA-redhat-00005</eap.version>
         <wildfly.core.version>18.1.1.Final</wildfly.core.version>
+        <apache.httpcomponents.fuse.version>4.5.2</apache.httpcomponents.fuse.version>
+        <apache.httpcomponents.httpcore.fuse.version>4.4.4</apache.httpcomponents.httpcore.fuse.version>
+        <ee.maven.groupId>org.wildfly</ee.maven.groupId>
+        <ee.maven.version>${wildfly.version}</ee.maven.version>
 
         <jboss.as.version>7.2.0.Final</jboss.as.version>
         <jboss.as.subsystem.test.version>7.5.22.Final-redhat-1</jboss.as.subsystem.test.version>
@@ -76,28 +65,27 @@
         <apache.httpcomponents.httpcore.version>4.4.14</apache.httpcomponents.httpcore.version>
         <apache.mime4j.version>0.6</apache.mime4j.version>
         <jboss.dmr.version>1.5.1.Final</jboss.dmr.version>
-        <bouncycastle.version>1.68</bouncycastle.version>
+        <bouncycastle.version>1.70</bouncycastle.version>
 
         <!-- TODO Are these correct versions? -->
         <bouncycastle.fips.version>1.0.2.3</bouncycastle.fips.version>
-        <bouncycastle.pkixfips.version>1.0.5</bouncycastle.pkixfips.version>
-        <bouncycastle.tlsfips.version>1.0.12.2</bouncycastle.tlsfips.version>
+        <bouncycastle.pkixfips.version>1.0.7</bouncycastle.pkixfips.version>
+        <bouncycastle.tlsfips.version>1.0.14</bouncycastle.tlsfips.version>
 
         <cxf.version>3.3.10</cxf.version>
         <cxf.jetty.version>3.3.10</cxf.jetty.version>
         <cxf.jaxrs.version>3.3.10</cxf.jaxrs.version>
         <cxf.undertow.version>3.3.10</cxf.undertow.version>
         <dom4j.version>2.1.3</dom4j.version>
-        <h2.version>1.4.197</h2.version>
+        <h2.version>2.1.214</h2.version>
         <jakarta.persistence.version>2.2.3</jakarta.persistence.version>
-        <hibernate.core.version>5.3.24.Final</hibernate.core.version>
-        <hibernate.c3p0.version>5.3.24.Final</hibernate.c3p0.version>
-        <infinispan.version>13.0.10.Final</infinispan.version>
-        <infinispan.protostream.processor.version>4.4.1.Final</infinispan.protostream.processor.version>
-        <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
-        <jackson.version>2.13.2</jackson.version>
-        <jackson.databind.version>2.13.2.2</jackson.databind.version>
-        <jackson.annotations.version>${jackson.databind.version}</jackson.annotations.version>
+        <hibernate.core.version>5.6.10.Final</hibernate.core.version>
+        <hibernate.c3p0.version>5.6.10.Final</hibernate.c3p0.version>
+        <infinispan.version>14.0.2.Final</infinispan.version>
+        <infinispan.protostream.processor.version>4.5.0.Final</infinispan.protostream.processor.version>
+        <jackson.version>2.13.4</jackson.version>
+        <jackson.databind.version>2.13.4.2</jackson.databind.version>
+        <jackson.annotations.version>${jackson.version}</jackson.annotations.version>
         <jakarta.mail.version>1.6.5</jakarta.mail.version>
         <jboss-jaxrs-api_2.1_spec>2.0.1.Final</jboss-jaxrs-api_2.1_spec>
         <jboss.logging.version>3.4.1.Final</jboss.logging.version>
@@ -131,7 +119,7 @@
         <google.guava.version>30.1-jre</google.guava.version>
 
         <!-- Openshift -->
-        <version.com.openshift.openshift-restclient-java>8.0.0.Final</version.com.openshift.openshift-restclient-java>
+        <version.com.openshift.openshift-restclient-java>9.0.5.Final</version.com.openshift.openshift-restclient-java>
 
         <!-- Others -->
         <commons-lang.version>2.6</commons-lang.version>
@@ -144,7 +132,7 @@
         <javaparser.version>3.24.2</javaparser.version>
 
         <jetty9.version>${jetty94.version}</jetty9.version>
-        <liquibase.version>4.8.0</liquibase.version>
+        <liquibase.version>4.16.1</liquibase.version>
         <osgi.version>4.2.0</osgi.version>
         <pax.web.version>7.1.0</pax.web.version>
         <servlet.api.30.version>1.0.2.Final</servlet.api.30.version>
@@ -201,7 +189,7 @@
         <surefire.system.args></surefire.system.args>
 
         <!-- Tomcat versions -->
-        <tomcat8.version>8.5.38</tomcat8.version>
+        <tomcat8.version>8.5.76</tomcat8.version>
         <tomcat9.version>9.0.16</tomcat9.version>
 
         <!-- Spring Boot versions, used for tests -->
@@ -1909,29 +1897,6 @@
 
     <profiles>
         <profile>
-            <id>community</id>
-            <activation>
-                <property>
-                    <name>!product</name>
-                </property>
-            </activation>
-            <properties>
-                <product.name>Keycloak</product.name>
-                <product.name.full>Keycloak</product.name.full>
-                <product.slot>keycloak</product.slot>
-                <product.wildfly.console.slot>main</product.wildfly.console.slot>
-                <product.name-html>\u003Cdiv class="kc-logo-text"\u003E\u003Cspan\u003EKeycloak\u003C\u002Fspan\u003E\u003C\u002Fdiv\u003E</product.name-html>
-                <product.version>${project.version}</product.version>
-                <product.default-profile>community</product.default-profile>
-                <apache.httpcomponents.fuse.version>4.5.2</apache.httpcomponents.fuse.version>
-                <apache.httpcomponents.httpcore.fuse.version>4.4.4</apache.httpcomponents.httpcore.fuse.version>
-                <ee.maven.groupId>org.wildfly</ee.maven.groupId>
-                <ee.maven.version>${wildfly.version}</ee.maven.version>
-                <product.filename.version>${project.version}</product.filename.version>
-            </properties>
-        </profile>
-
-        <profile>
             <id>jdk9</id>
             <activation>
                 <jdk>[9,)</jdk>
@@ -1939,59 +1904,9 @@
             <properties>
                 <surefire.system.args>
                     --add-opens=java.base/java.lang=ALL-UNNAMED
+                    --add-opens=java.base/java.util=ALL-UNNAMED
                 </surefire.system.args>
             </properties>
-        </profile>
-
-        <profile>
-            <id>product</id>
-            <activation>
-                <property>
-                    <name>product</name>
-                </property>
-            </activation>
-            <properties>
-                <product.name.full>Red Hat Single Sign-On</product.name.full>
-                <product.name>rh-sso</product.name>
-                <product.slot>rh-sso</product.slot>
-                <product.wildfly.console.slot>eap</product.wildfly.console.slot>
-                <product.name-html>\u003Cstrong\u003ERed Hat\u003C\u002Fstrong\u003E\u003Csup\u003E\u00AE\u003C\u002Fsup\u003E Single Sign On</product.name-html>
-                <product.version>${product.rhsso.version}</product.version>
-                <apache.httpcomponents.fuse.version>4.5.2.redhat-2</apache.httpcomponents.fuse.version>
-                <apache.httpcomponents.httpcore.fuse.version>4.4.4.redhat-2</apache.httpcomponents.httpcore.fuse.version>
-                <product.default-profile>product</product.default-profile>
-                <ee.maven.groupId>org.jboss.eap</ee.maven.groupId>
-                <ee.maven.version>${eap.version}</ee.maven.version>
-                <!-- Properties that drive the names of various directories produced by and used in the build -->
-                <server.output.dir.prefix>${product.name}</server.output.dir.prefix>
-                <!-- Version suffix that is appended to directories. Default is the maven GAV version but this can be edited to use a short form version -->
-                <server.output.dir.version>${product.filename.version}</server.output.dir.version>
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>build-helper-maven-plugin</artifactId>
-                        <version>1.7</version>
-                        <executions>
-                            <execution>
-                                <id>set-product-filename-version</id>
-                                <goals>
-                                    <goal>regex-property</goal>
-                                </goals>
-                                <phase>initialize</phase>
-                                <configuration>
-                                    <name>product.filename.version</name>
-                                    <value>${product.rhsso.version}</value>
-                                    <regex>^(\d+(\.\d+)?).*?$</regex>
-                                    <replacement>$1</replacement>
-                                    <failIfNoMatch>true</failIfNoMatch>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
         </profile>
 
         <profile>
@@ -2035,7 +1950,6 @@
         <profile>
             <id>operator</id>
             <activation>
-                <jdk>[11,)</jdk>
                 <property>
                     <name>operator</name>
                 </property>
